main section adjustments

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 </div>
 <div class="section">
     <div class="container">
-        <h1 class="big-title" >hi, my name is <span>shinykiwi</span></h1>
-        <p class="subtitle" >I'm a full-time student studying computer science and computation arts to eventually work in game development. I'm passionate about the art and craft of making games, and I hope to work in that environment someday.I am open to commissions if you're looking for something specific. What's shown on this site may not represent everything that I can do or am open to, so if you want something that's not here currently, please don't hesitate to reach out and ask; I love learning new things :)</p>
+        <div style="width: 25%">
+            <h1 class="big-title" >hi, my name is <span>shinykiwi</span></h1>
+        </div>
+        <div style="width: 25%">
+            <p class="subtitle" >I'm a full-time student studying computer science and computation arts to eventually work in game development. I'm passionate about the art and craft of making games, and I hope to work in that environment someday.I am open to commissions if you're looking for something specific. What's shown on this site may not represent everything that I can do or am open to, so if you want something that's not here currently, please don't hesitate to reach out and ask; I love learning new things :)</p>
+        </div>
+
     </div>
 </div>
 
