--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                         </a>
                                     </div>
                                     <div class="flex flex-col w-full px-4 py-4 border bg-gray-900 border-gray-800 rounded-md bg-card transition duration-100 transform shadow hover:-translate-y-1 hover:border-indigo-800/80">
-                                        <a href="https://crafty.gg" target="_blank" rel="noreferrer">
+                                        <a href="" target="_blank" rel="noreferrer">
                                             <div class="flex mb-4 justify-center">
                                                 <img class="rounded-lg" src="img/galaxy_background.jpeg" alt="galaxy" width="400px" height="400px">
                                             </div>
@@ -227,34 +227,11 @@
                 </div>
             </main>
             <div class="mb-5 px-5">
-                <h2 class="text-2xl font-extrabold leading-9 tracking-tight text-gray-100">Other Projects</h2>
-                <ul class="pt-2, list-disc list-inside">
-                    <li>
-                        <a href="https://smartlockers.roberto.gr" rel="noreferrer" target="_blank">
-                            Smart Lockers - A map with smart lockers from various companies in Greece.
-                        </a>
-                        <img src="img/external.svg" width="24" height="24" class="mx-2 inline-block" alt="External Link">
-                    </li>
-                    <li>
-                        <a href="https://smartlockers.roberto.gr" rel="noreferrer" target="_blank">
-                            Smart Lockers - A map with smart lockers from various companies in Greece.
-                        </a>
-                        <img src="img/external.svg" width="24" height="24" class="mx-2 inline-block" alt="External Link">
-                    </li>
-                </ul>
-            </div>
-            <div class="mb-5 px-5">
                 <h2 class="text-2xl font-extrabold leading-9 tracking-tight text-gray-100">Resources</h2>
                 <ul class="pt-2, list-disc list-inside">
                     <li>
-                        <a href="https://smartlockers.roberto.gr" rel="noreferrer" target="_blank">
-                            Smart Lockers - A map with smart lockers from various companies in Greece.
-                        </a>
-                        <img src="img/external.svg" width="24" height="24" class="mx-2 inline-block" alt="External Link">
-                    </li>
-                    <li>
-                        <a href="https://smartlockers.roberto.gr" rel="noreferrer" target="_blank">
-                            Smart Lockers - A map with smart lockers from various companies in Greece.
+                        <a href="" rel="noreferrer" target="_blank">
+                           Cool project here
                         </a>
                         <img src="img/external.svg" width="24" height="24" class="mx-2 inline-block" alt="External Link">
                     </li>
