--- a/art.html
+++ b/art.html
@@ -96,10 +96,10 @@
                                    </div>
                                </a>
                            </div>
-                           <div class="flex flex-col border-blue-400 border-2 transition duration-100 transform hover:-translate-y-1 hover:border-indigo-800/80 ">
-                               <a href="https://github.com/shinykiwi/cgd-bot" target="_blank" rel="noreferrer">
-                                   <div class="border-red-600 border-2 ">
-                                       <img class="h-full object-cover align-middle" src="art/morning-view.png" alt="cgd">
+                           <div class="flex flex-col transition duration-100 transform hover:-translate-y-1 hover:border-indigo-800/80 ">
+                               <a class="h-full" href="https://github.com/shinykiwi/cgd-bot" target="_blank" rel="noreferrer">
+                                   <div class="w-full h-full">
+                                       <img class="h-full w-full object-cover align-middle" src="art/morning-view.png" alt="cgd">
                                    </div>
 
                                    <div class="absolute  w-full h-full bottom-0 left-0 opacity-0 hover:opacity-75 transition ease-in bg-black">
