--- a/art.html
+++ b/art.html
@@ -3,7 +3,7 @@
 <head >
     <meta charset="UTF-8">
     <title>shinykiwi</title>
-    <link rel="stylesheet" href="dist/output.css" >
+    <link rel="stylesheet" href="dust/output.css" >
 </head>
 <body class="antialiased text-white light:bg-white" >
 <div class="flex flex-col justify-between h-screen max-w-screen-lg mx-auto">
@@ -71,6 +71,54 @@
                                     </div>
                                 </a>
                             </div>
+                            <div class="flex flex-col transition duration-100 transform hover:-translate-y-1 hover:border-indigo-800/80">
+                                <a class="h-full" href="https://github.com/shinykiwi/cgd-bot" target="_blank" rel="noreferrer">
+                                    <div class="w-full h-full">
+                                        <img class="h-full w-full object-cover align-middle " src="art/cape-waterfall.gif" alt="cgd">
+                                    </div>
+                                    <div class="absolute w-full h-full bottom-0 left-0 opacity-0 hover:opacity-75 transition ease-in bg-black">
+                                        <div class="absolute bottom-0 m-2 p-1 w-full">
+                                            <div class="text-white text-md font-bold text-left"><em>Waterfall Cloak</em><br>for Badlion Client<br>2022</div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="flex flex-col transition duration-100 transform hover:-translate-y-1 hover:border-indigo-800/80">
+                                <a class="h-full" href="https://github.com/shinykiwi/cgd-bot" target="_blank" rel="noreferrer">
+                                    <div class="w-full h-full">
+                                        <img class="h-full w-full object-cover align-middle " src="art/cape-winter.gif" alt="cgd">
+                                    </div>
+                                    <div class="absolute w-full h-full bottom-0 left-0 opacity-0 hover:opacity-75 transition ease-in bg-black">
+                                        <div class="absolute bottom-0 m-2 p-1 w-full">
+                                            <div class="text-white text-md font-bold text-left"><em>Winter Cloak</em><br>for Badlion Client<br>2022</div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="flex flex-col transition duration-100 transform hover:-translate-y-1 hover:border-indigo-800/80">
+                                <a class="h-full" href="https://github.com/shinykiwi/cgd-bot" target="_blank" rel="noreferrer">
+                                    <div class="w-full h-full">
+                                        <img class="h-full w-full object-cover align-middle " src="art/cape-flower.gif" alt="cgd">
+                                    </div>
+                                    <div class="absolute w-full h-full bottom-0 left-0 opacity-0 hover:opacity-75 transition ease-in bg-black">
+                                        <div class="absolute bottom-0 m-2 p-1 w-full">
+                                            <div class="text-white text-md font-bold text-left"><em>Flower Cloak</em><br>for Badlion Client<br>2023</div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="flex flex-col transition duration-100 transform hover:-translate-y-1 hover:border-indigo-800/80">
+                                <a class="h-full" href="https://github.com/shinykiwi/cgd-bot" target="_blank" rel="noreferrer">
+                                    <div class="w-full h-full">
+                                        <img class="h-full w-full object-cover align-middle " src="art/cape-water.gif" alt="cgd">
+                                    </div>
+                                    <div class="absolute w-full h-full bottom-0 left-0 opacity-0 hover:opacity-75 transition ease-in bg-black">
+                                        <div class="absolute bottom-0 m-2 p-1 w-full">
+                                            <div class="text-white text-md font-bold text-left"><em>Landscape Cloak</em><br>for Badlion Client<br>2022</div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="mt-5">
@@ -79,6 +127,8 @@
                            <div class="flex flex-col transition duration-100 transform hover:-translate-y-1 hover:border-indigo-800/80">
                                <a href="https://github.com/shinykiwi/cgd-bot" target="_blank" rel="noreferrer">
                                    <img class="align-middle object-cover " src="art/sushi-plant.png" alt="cgd">
+                                   <!-- The Modal -->
+
                                    <div class="absolute w-full h-full top-0 bottom-0 right-0 left-0 opacity-0 hover:opacity-75 transition ease-in bg-black">
                                        <div class="absolute bottom-0 m-2 p-1 w-full">
                                            <div class="text-white text-md font-bold text-left"><em>Sushi Flowers</em><br>2020</div>
@@ -138,11 +188,37 @@
                                 </a>
                             </div>
                             <div class="flex flex-col transition duration-100 transform hover:-translate-y-1 hover:border-indigo-800/80">
-                                <a href="https://github.com/shinykiwi/cgd-bot" target="_blank" rel="noreferrer">
-                                    <img class="align-middle object-cover" src="art/jacob-bday.png" alt="cgd">
+                                <a class="h-full" href="https://github.com/shinykiwi/cgd-bot" target="_blank" rel="noreferrer">
+                                    <div class="w-full h-full">
+                                        <img class="h-full w-full object-cover align-middle" src="art/jacob-bday.png" alt="cgd">
+                                    </div>
                                     <div class="absolute w-full h-full bottom-0 left-0 opacity-0 hover:opacity-75 transition ease-in bg-black">
                                         <div class="absolute bottom-0 m-2 p-1 w-full">
-                                            <div class="text-white text-md font-bold text-left"><em>Jacob Portrait</em><br>2022</div>
+                                            <div class="text-white text-md font-bold text-left"><em>Portrait of Jacob</em><br>2022</div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="flex flex-col transition duration-100 transform hover:-translate-y-1 hover:border-indigo-800/80">
+                                <a class="h-full" href="https://github.com/shinykiwi/cgd-bot" target="_blank" rel="noreferrer">
+                                    <div class="w-full h-full">
+                                        <img class="h-full w-full object-cover align-middle " src="art/character-design.png" alt="cgd">
+                                    </div>
+                                    <div class="absolute w-full h-full bottom-0 left-0 opacity-0 hover:opacity-75 transition ease-in bg-black">
+                                        <div class="absolute bottom-0 m-2 p-1 w-full">
+                                            <div class="text-white text-md font-bold text-left"><em>The Librarian</em><br>2021</div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="flex flex-col transition duration-100 transform hover:-translate-y-1 hover:border-indigo-800/80">
+                                <a class="h-full" href="https://github.com/shinykiwi/cgd-bot" target="_blank" rel="noreferrer">
+                                    <div class="w-full h-full">
+                                        <img class="h-full w-full object-cover align-middle " src="art/diana.PNG" alt="cgd">
+                                    </div>
+                                    <div class="absolute w-full h-full bottom-0 left-0 opacity-0 hover:opacity-75 transition ease-in bg-black">
+                                        <div class="absolute bottom-0 m-2 p-1 w-full">
+                                            <div class="text-white text-md font-bold text-left"><em>Diana</em><br>2023</div>
                                         </div>
                                     </div>
                                 </a>
@@ -183,7 +259,44 @@
                         </div>
                     </div>
                     <div class="mt-5">
-                        <h2 class="mt-0 mb-3 text-xl text-black">CART 212 - Creative Computing and Network Culture</h2>
+                        <h2 class="mt-0 mb-3 text-xl text-black">CART 211 - Creative Computing and Network Culture</h2>
+
+                        <div class="grid w-full grid-cols-1 gap-3 md:grid-cols-3">
+                            <div class="flex flex-col transition duration-100 transform hover:-translate-y-1 hover:border-indigo-800/80 ">
+                                <a class="h-full" href="https://github.com/shinykiwi/cgd-bot" target="_blank" rel="noreferrer">
+                                    <div class="w-full h-full">
+                                        <img class="h-full w-full object-cover align-middle" src="art/cart212.png" alt="cgd">
+                                    </div>
+
+                                    <div class="absolute  w-full h-full bottom-0 left-0 opacity-0 hover:opacity-75 transition ease-in bg-black">
+                                        <div class="absolute bottom-0 m-2 p-1 w-full ">
+                                            <div class="text-white text-md font-bold text-left"><em>Randolph's Radios</em><br>2022</div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="flex flex-col transition duration-100 transform hover:-translate-y-1 hover:border-indigo-800/80 ">
+                                <a class="h-full" href="https://github.com/shinykiwi/cgd-bot" target="_blank" rel="noreferrer">
+                                    <div class="w-full h-full">
+                                        <img class="h-full w-full object-cover align-middle" src="art/dailyexpress.png" alt="cgd">
+                                    </div>
+
+                                    <div class="absolute  w-full h-full bottom-0 left-0 opacity-0 hover:opacity-75 transition ease-in bg-black">
+                                        <div class="absolute bottom-0 m-2 p-1 w-full ">
+                                            <div class="text-white text-md font-bold text-left"><em>The Daily Express</em><br>2022</div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+
+
+                            <div class="h-10">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mt-5">
+                        <h2 class="mt-0 mb-3 text-xl text-black">CART 212 - Digital Media Studio I</h2>
 
                         <div class="grid w-full grid-cols-1 gap-3 md:grid-cols-3">
                             <div class="flex flex-col transition duration-100 transform hover:-translate-y-1 hover:border-indigo-800/80">
@@ -191,17 +304,17 @@
                                     <img class="align-middle object-cover" src="art/cart212.png" alt="cgd">
                                     <div class="absolute w-full h-full top-0 bottom-0 right-0 left-0 opacity-0 hover:opacity-75 transition ease-in bg-black">
                                         <div class="absolute bottom-0 m-2 p-1 w-full">
-                                            <div class="text-white text-md font-bold text-left"><em>Randolph's Radios</em><br>2022</div>
+                                            <div class="text-white text-md font-bold text-left"><em>Wunderkammer</em><br>2023</div>
                                         </div>
                                     </div>
                                 </a>
                             </div>
                             <div class="flex flex-col transition duration-100 transform hover:-translate-y-1 hover:border-indigo-800/80">
                                 <a href="https://github.com/shinykiwi/cgd-bot" target="_blank" rel="noreferrer">
-                                    <img class="align-middle object-cover" src="art/dailyexpress.png" alt="cgd">
+                                    <img class="align-middle object-cover" src="art/final-212.png" alt="cgd">
                                     <div class="absolute w-full h-full top-0 bottom-0 right-0 left-0 opacity-0 hover:opacity-75 transition ease-in bg-black">
                                         <div class="absolute bottom-0 m-2 p-1 w-full">
-                                            <div class="text-white text-md font-bold text-left"><em>Daily Express Site</em><br>2022</div>
+                                            <div class="text-white text-md font-bold text-left"><em>It's All Over, But the Crying</em><br>2023</div>
                                         </div>
                                     </div>
                                 </a>
