--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head >
     <meta charset="UTF-8">
     <title>shinykiwi</title>
-    <link rel="stylesheet" href="dist/output.css" >
+    <link rel="stylesheet" href="dust/output.css" >
 </head>
 <body class="antialiased text-white dark:bg-black" >
     <div class="flex flex-col justify-between h-screen max-w-screen-lg mx-auto">
@@ -68,24 +68,23 @@
                             </div>
                             <div class="max-w-screen-lg pt-4 mx-auto">
                                 <div class="grid w-full grid-cols-1 gap-3 md:grid-cols-2">
-                                    <div class="flex flex-col w-full px-4 py-4 border bg-gray-900 border-gray-800 rounded-md bg-card transition duration-100 transform shadow hover:-translate-y-1 hover:border-indigo-800/80">
-                                        <a href="https://github.com/shinykiwi/cgd-bot" target="_blank" rel="noreferrer">
+                                    <div class="flex flex-wrap w-full px-4 py-4 border bg-gray-900 border-gray-800 rounded-md bg-card transition duration-100 transform shadow hover:-translate-y-1 hover:border-indigo-800/80">
+                                        <a href="https://shinykiwi.itch.io/average-day-in-1347" target="_blank" rel="noreferrer">
                                             <div class="flex mb-4 justify-center">
-                                                <img class="rounded-lg" src="img/cgd-art.png" alt="cgd" width="400px" height="400px">
+                                                <img class="rounded-lg" src="img/1347game.png" alt=justadayin1347gameß" width="400px" height="400px">
                                             </div>
                                             <div class="flex w-full">
-
-                                                <h1 class="flex items-center font-semibold text-white">CGD bot
-                                                    <span class="mx-2 select-none rounded-full bg-opacity-25 px-2 text-xs text-emerald-400 bg-emerald-500">
-                                                        Active
+                                                <h1 class="flex items-center font-semibold text-white">Just a Day in 1347
+                                                    <span class="mx-2 select-none rounded-full bg-opacity-25 px-2 text-xs text-orange-400 bg-orange-500">
+                                                        Game Jam
                                                     </span>
-                                                    <img class="mx-1" alt="discord" width="16px" height="16px" src="img/discord.svg"/>
-                                                    <img class="mx-1" alt="python" width="16px" height="16px" src="img/python.svg"/>
-
+                                                    <span class="select-none rounded-full bg-opacity-25 px-2 text-xs text-red-400 bg-red-500">
+                                                        48h
+                                                    </span>
                                                 </h1>
                                             </div>
                                             <div class="w-full">
-                                                <p class="pt-1 text-xs text-gray-300">A Discord bot to moderate my student club's growing server, Concordia Game Development. Tools for creating/editing embeds, community interaction & projects, emoji submission and more!</p>
+                                                <p class="pt-1 text-xs text-gray-300">My submission for the Montreal Game Jam 2023. You are tasked by the University of  Paris medical faculty, where you work, to help contain the spread of the plague in a nearby town. Fight the poison air beasts that have been spreading the plague and save the town!</p>
                                             </div>
                                         </a>
                                     </div>
@@ -219,7 +218,27 @@
                                             </div>
                                         </a>
                                     </div>
+                                    <div class="flex flex-col w-full px-4 py-4 border bg-gray-900 border-gray-800 rounded-md bg-card transition duration-100 transform shadow hover:-translate-y-1 hover:border-indigo-800/80">
+                                        <a href="https://github.com/shinykiwi/cgd-bot" target="_blank" rel="noreferrer">
+                                            <div class="flex mb-4 justify-center">
+                                                <img class="rounded-lg" src="img/cgd-art.png" alt="cgd" width="400px" height="400px">
+                                            </div>
+                                            <div class="flex w-full">
 
+                                                <h1 class="flex items-center font-semibold text-white">CGD bot
+                                                    <span class="mx-2 select-none rounded-full bg-opacity-25 px-2 text-xs text-emerald-400 bg-emerald-500">
+                                                        Active
+                                                    </span>
+                                                    <img class="mx-1" alt="discord" width="16px" height="16px" src="img/discord.svg"/>
+                                                    <img class="mx-1" alt="python" width="16px" height="16px" src="img/python.svg"/>
+
+                                                </h1>
+                                            </div>
+                                            <div class="w-full">
+                                                <p class="pt-1 text-xs text-gray-300">A Discord bot to moderate my student club's growing server, Concordia Game Development. Tools for creating/editing embeds, community interaction & projects, emoji submission and more!</p>
+                                            </div>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
